# Korg.px

./: .gitignore  Project.toml  README.md  progress.md  pyproject.toml
.github/scripts/: setup_ci_artifacts.py
.github/workflows/: PythonTests.yml
examples/: README.md  interpolate_marcs_demo.py  interpolate_marcs_demo_fixed.py
src/korg/: __init__.py  abundances.py  artifacts.py  atmosphere.py  atomic_data.py  constants.py  continuum.py  cubic_splines.py  data_loader.py  hydrogen_line_absorption.py  hydrogen_stark_data.py  isotopic_data.py  line_absorption.py  line_broadening.py  line_profiles.py  linelist.py  marcs_interpolation.py  peach1970.py  scattering.py  species.py  stancil1994.py  statmech.py  synthesis.py  utils.py  vald_parser.py  wavelengths.py
src/korg/continuum_absorption/: __init__.py  absorption_He.py  absorption_h_minus.py  absorption_metals_bf.py  bounds_checking.py  hydrogenic_bf_ff.py  scattering.py
src/korg/data/: synthesis_data.npz
src/korg/radiative_transfer/: __init__.py  core.py  expint.py  intensity.py  optical_depth.py
tests/: __init__.py  conftest.py  generate_julia_reference.jl  julia_reference_data.json  test_basic.py  test_constants.py  test_hydrogen_brackett_jit.py  test_hydrogen_full_jit.py  test_hydrogen_line_absorption_jit.py  test_julia_reference.py  test_line_absorption_jit.py  test_linelist.py  test_marcs_interpolation.py  test_synthesis_jit.py
